...

        attributedRotator.numberOfLines = 1
        attributedRotator.adjustsFontForContentSizeCategory = true

        attributedMarquee.adjustsFontForContentSizeCategory = true

        shimmerLabel.text = "UIKit shimmer"
        shimmerLabel.font = .preferredFont(forTextStyle: .headline)
        shimmerLabel.textColor = .secondaryLabel
        shimmerLabel.highlightColor = .label
        shimmerLabel.adjustsFontForContentSizeCategory = true
        shimmerLabel.isShimmering = true

...
